Fix link to social share icons. Adjust margin for white box on smaller screens

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -269,10 +269,15 @@ h2 {
       }
   }
   .white-box {
-    margin: 2em;
+    margin: 2em 0;
     padding: 2em 2em 1em;
     background-color: $white;
     text-align: left;
+  }
+  @media (max-width: 850px) {
+    .white-box {
+      margin: 2em;
+    }
   }
 }
 
